Fixed a minor alignment issue with nav bar overlap the body

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 header {
-  max-height: 25vh;
+  /* max-height: 25vh; */
 }
 main {
   grid-area: main;
